--- a/GSE42127 Background correction.Rmd
+++ b/GSE42127 Background correction.Rmd
@@ -40,12 +40,57 @@ gse42127_corrected = backgroundCorrect.matrix(gse42127.expr, method = "normexp")
 #normalization
 gse42127.normalized = normalizeBetweenArrays(gse42127_corrected, method = "quantile")
 
+write.csv(gse42127.data, 
+          file = "~/Thesis/GSE42127_data.csv")
+
 hist(gse42127.expr)
 hist(gse42127_corrected)
 hist(gse42127.normalized)
 ```
 
-#RESEARCH BACKGROUND CORRECTION FOR ILLUMINA FILE..RMA IS AFFYM
+```{r}
+gse = getGEO("GSE42127", GSEMatrix = T)
+
+feature.dat = 
+  gse$GSE42127_series_matrix.txt.gz@featureData@data
+
+feature.df = feature.dat[, c("ID", "ILMN_Gene")]
+
+write.csv(feature.df, 
+          "~/Thesis/GSE42127symbol.csv", 
+          row.names = F)
+
+gset = getGEO("GSE42127", GSEMatrix=T, getGPL=F)
+if (length(gset) > 1) 
+  idx <- grep("GPL570", attr(gset, "names")) else idx <- 1
+gset <- gset[[idx]]
+
+# Extract microarray expression values from NCBI
+GSE42127.gset = as_tibble(t(exprs(gset)))
+
+clin_demo_feature = as_tibble(gset@phenoData@data) %>%
+  select(-(title:data_row_count))
+
+#GSE42127.df = cbind(clin_demo_feature, gse42127_corrected)
+
+# Next, we want to append clinical information onto gene expression data
+gse42127.data = clin_demo_feature 
+colnames(gse42127.data) = c("Age at Surgery", "Final_Pat_Stage", "Gender", "Adjuvant Chemo", "Histology", "Survival Months", "Survival Status")
+
+# fetch feature data to get gene symbols
+#feature.dat = gse$GSE42127_series_matrix.txt.gz@featureData@data 
+#GSE42127.symbol = feature.dat[, c("ID", "Gene Symbol", "Gene Title")]
+#write.csv(GSE42127.symbol, "~/Thesis/GSE42127_symbol.csv")
+
+write.csv(gse42127.data, 
+          file = "~/Thesis/GSE42127_data.csv")
+```
 
 
+```{r}
+#Merge clinical data and expression data
+GSE42127merged = cbind(gse42127.data, gse42127.normalized)
+write.csv(GSE42127merged, 
+          "~/Downloads/GSE42127merged.csv")
+```
 
