--- a/GSE14814.Rmd
+++ b/GSE14814.Rmd
@@ -81,6 +81,7 @@ GSE14814.data = GSE14814.data[, c(1, 7, 8, 9, 10, 12, 13)]
 
 colnames(GSE14814.data) = c("Age", "Histology", "OS_STATUS", "OS_MONTHS", "Adjuvant Chemo", "Sex", "Stage")
 
+GSE14814.data$OS_MONTHS = GSE14814.data$OS_MONTHS*12
 GSE14814.data$Age = as.numeric(GSE14814.data$Age)
 GSE14814.data$OS_MONTHS = as.numeric(GSE14814.data$OS_MONTHS)
 GSE14814.data$OS_STATUS <- ifelse(GSE14814.data$OS_STATUS == "Dead", 1, 0)
@@ -88,6 +89,8 @@ GSE14814.data$`Adjuvant Chemo` <- ifelse(GSE14814.data$`Adjuvant Chemo` == "ACT"
 GSE14814.data$Histology[GSE14814.data$Histology == "ADC"] <- "Adenocarcinoma"
 GSE14814.data$Histology[GSE14814.data$Histology == "SQCC"] <- "Squamous Cell Carcinoma"
 GSE14814.data$Histology[GSE14814.data$Histology == "LCUC"] <- "Large Cell Undifferentiated Carcinoma"
+GSE14814.data$"Smoked?" = NA
+GSE14814.data$Race = "Not Reported"
 
 # fetch feature data to get gene symbols
 feature.dat = gse$GSE14814_series_matrix.txt.gz@featureData@data 
