--- a/GSE31210.Rmd
+++ b/GSE31210.Rmd
@@ -42,7 +42,7 @@ write.csv(GSE31210.rma,
 # Get the data to be used in R
 GSE31210.expr = as.data.frame(t(exprs(GSE31210.rma)))
 
-probes31908 = colnames(GSE31210.expr)
+probes31210 = colnames(GSE31210.expr)
 
 write.csv(GSE31210.expr, 
           "GSE31210expr.csv",
@@ -74,17 +74,21 @@ GSE31210.data = as_tibble(gset@phenoData@data) %>%
 GSE31210.data$`age (years):ch1` = coalesce(GSE31210.data$`age (years):ch1`, GSE31210.data$`age:ch1`)
 GSE31210.data$`OS_MONTHS` <- round(as.numeric(GSE31210.data$`days before death/censor:ch1`) / 30.44, 2)
 GSE31210.data$Histology <- "Adenocarcinoma"
-GSE31210.data = GSE31210.data[, c(1, 7, 9, 15, 18, 20, 21)]
-GSE31210.data$`Smoked?` = as.numeric(GSE31210.data$`Smoked?`)
+GSE31210.data = GSE31210.data[, c(1, 7, 9, 12, 15, 18, 20, 21)]
 
 # Next, we want to append clinical information onto gene expression data
-colnames(GSE31210.data) = c("Age", "OS_STATUS", "Sex", "Stage", "Smoked?", "OS_MONTHS", "Histology")
+colnames(GSE31210.data) = c("Age", "OS_STATUS", "Sex", "RFS_MONTHS","Stage", "Smoked?", "OS_MONTHS", "Histology")
 
 GSE31210.data$OS_STATUS <- ifelse(GSE31210.data$OS_STATUS == "dead", 1, 0)
 GSE31210.data$Age = as.numeric(GSE31210.data$Age)
 GSE31210.data$Sex <- ifelse(GSE31210.data$Sex == "male", "Male", "Female")
 GSE31210.data$`Smoked?` <- ifelse(GSE31210.data$`Smoked?` == "Never-smoker", "0", "1")
+GSE31210.data$`Smoked?` = as.numeric(GSE31210.data$`Smoked?`)
 GSE31210.data <- subset(GSE31210.data, !is.na(OS_STATUS))
+GSE31210.data$"Adjuvant Chemo" = NA
+GSE31210.data$Race = "Unknown"
+GSE31210.data$RFS_MONTHS <- sapply(strsplit(as.character(GSE31210.data$RFS_MONTHS), ";"), function(x) round(as.numeric(x[1]), 2))
+
 
 # fetch feature data to get gene symbols
 feature.dat = gse$GSE31210_series_matrix.txt.gz@featureData@data 
@@ -125,6 +129,10 @@ annotation31210 <- select(hgu133plus2.db,
 
 # View the results
 print(annotation31210)
+
+# Unique Symbols
+unique31210 = unique(annotation31210$SYMBOL)
+print(length(unique31210))
 
 duplicate_genes31210 <- annotation31210[duplicated(annotation31210$PROBEID), ]
 print(duplicate_genes31210)
