--- a/GSE50081.Rmd
+++ b/GSE50081.Rmd
@@ -77,6 +77,7 @@ GSE50081.data = GSE50081.data[, c(1, 3, 7, 8, 9, 10, 11)]
 
 colnames(GSE50081.data) = c("Age", "Histology", "Sex", "Smoked?", "Stage", "OS_STATUS", "OS_MONTHS")
 
+GSE50081.data$OS_MONTHS = GSE50081.data$OS_MONTHS*12
 GSE50081.data$OS_STATUS <- ifelse(GSE50081.data$OS_STATUS == "dead", 1, 0)
 GSE50081.data$`Smoked?` <- ifelse(GSE50081.data$`Smoked?` %in% c("Current", "Ex-smoker"), 1,
                                   ifelse(GSE50081.data$`Smoked?` == "Never", 0, NA))
@@ -94,6 +95,8 @@ GSE50081.data$Stage[GSE50081.data$Stage == "1B"  ] <- "IB"
 GSE50081.data$Stage[GSE50081.data$Stage == "2A"  ] <- "IIA"
 GSE50081.data$Stage[GSE50081.data$Stage == "2B"  ] <- "IIB"
 GSE50081.data$OS_MONTHS = as.numeric(GSE50081.data$OS_MONTHS)
+GSE50081.data$"Adjuvant Chemo" = 0
+GSE50081.data$Race = "Unknown"
 
 # fetch feature data to get gene symbols
 feature.dat = gse$GSE50081_series_matrix.txt.gz@featureData@data 
